--- a/ckanext/amplus/assets/css/custom.css
+++ b/ckanext/amplus/assets/css/custom.css
@@ -13179,6 +13179,10 @@ a:hover, a:focus, a:active {
   .featured-item {
     flex: 1 1 100%;
   }
+
+  .page-header .nav-tabs {
+    display: block;
+  }
 }
 .facet {
   font-weight: 600;
