Display in the center

--- a/ckanext/amplus/assets/css/custom.css
+++ b/ckanext/amplus/assets/css/custom.css
@@ -13171,6 +13171,9 @@ a:hover, a:focus, a:active {
   .homepage .insights {
     padding: 100px 50px;
   }
+  .homepage .row {
+    justify-content: center;
+  }
 
   .navbar-toggler {
     margin-right: 15px;
