--- a/ckanext/amplus/assets/sass/_responsive-lg.scss
+++ b/ckanext/amplus/assets/sass/_responsive-lg.scss
@@ -9,6 +9,9 @@
         .insights {
             padding: 100px 50px;
         }
+        .row {
+            justify-content: center;
+        }
     }
     .navbar-toggler {
         margin-right: 15px;
