Fix discover your data tabs

--- a/ckanext/amplus/assets/css/custom.css
+++ b/ckanext/amplus/assets/css/custom.css
@@ -12903,6 +12903,10 @@ a:hover, a:focus, a:active {
   display: block !important;
 }
 
+.fade.in {
+  opacity: 1;
+}
+
 .hero {
   display: flex;
   justify-content: center;
