--- a/ckanext/amplus/templates/home/layout1.html
+++ b/ckanext/amplus/templates/home/layout1.html
@@ -27,7 +27,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="toggle-section text-center">
-        <ul class="nav-tabs nav-justified">
+        <ul class="nav-justified">
           <li>
             <a class="toggle-view" href="#data" data-toggle="tab">
               <p>{{_("Data")}}</p>
@@ -66,7 +66,7 @@
             {% endif %}
         </div>
         
-        <div class="data tab-pane fade flex-column flex-align-center" id="locate">
+        <div class="data tab-pane fade flex-column flex-align-center align-items-center" id="locate">
           <!-- Map Section -->
           {% snippet 'snippets/coming_soon.html' %}
         </div>
