--- a/ckanext/amplus/templates/footer.html
+++ b/ckanext/amplus/templates/footer.html
@@ -1,5 +1,5 @@
 {% block stats %}
-    {% snippet 'home/snippets/stats.html' %}
+    {% snippet 'home/snippets/amplus_stats.html' %}
 {% endblock %}
 
 {% block footer_content %}
