--- a/ckanext/amplus/templates/home/layout1.html
+++ b/ckanext/amplus/templates/home/layout1.html
@@ -20,7 +20,7 @@
   </div>
 </div>
 
-<div class="stats-container">
+<div class="stats-container-amplus">
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
