--- a/ckanext/amplus/templates/package/search.html
+++ b/ckanext/amplus/templates/package/search.html
@@ -3,11 +3,16 @@
 {% ckan_extends %}
 
 {% block primary_content %}
-  {% snippet 'home/snippets/amplus_featured_groups.html', items=4, getGroups=true %}
+  {% if g.org_dataset == 'yes' %}
+    {% snippet 'home/snippets/amplus_featured_groups.html', items=4, getGroups=true %}
+  {% endif %}
+
   {{ super() }}
 {% endblock %}
 
 {% block package_search_results_list %}
-        {{ h.snippet('home/snippets/amplus_featured_groups.html', groups = c.page.items) }}
+  {% if g.org_dataset == 'yes' %}
+    {{ h.snippet('home/snippets/amplus_featured_groups.html', groups = c.page.items) }}
+  {% endif %}
 {% endblock %}
 
