--- a/ckanext/amplus/templates/footer.html
+++ b/ckanext/amplus/templates/footer.html
@@ -3,7 +3,7 @@
 {% endblock %}
 
 {% block footer_content %}
-<div class="footer-container">
+<div class="footer-container" style="align-items: center;">
     <div class="row">
         <div class="col-md-12 col-lg-4 attribution">
           {% block footer_attribution %}
