--- a/ckanext/amplus/templates/footer.html
+++ b/ckanext/amplus/templates/footer.html
@@ -4,7 +4,7 @@
 
 {% block footer_content %}
 <div class="footer-container" style="align-items: center;">
-    <div class="row">
+    <div class="row justify-content-center">
         <div class="col-md-12 col-lg-4 attribution">
           {% block footer_attribution %}
               {% block footer_links %}
