--- a/ckanext/amplus/templates/home/snippets/search.html
+++ b/ckanext/amplus/templates/home/snippets/search.html
@@ -12,10 +12,10 @@
       </button>
     </div>
   </form>
-  <div class="tags bg-secondary">
+  <!-- <div class="tags bg-secondary">
     <h3>{{ _('Popular tags') }}</h3>
     {% for tag in tags %}
       <a class="tag" href="{% url_for 'dataset.search', tags=tag.name %}">{{ h.truncate(tag.display_name, 22) }}</a>
     {% endfor %}
-  </div>
+  </div> -->
 </div>
