Adding language selector for multilingual

--- a/ckanext/amplus/templates/footer.html
+++ b/ckanext/amplus/templates/footer.html
@@ -42,6 +42,9 @@
               {% endif %}
             </div>
             {% endblock %}
+            {% block footer_lang %}
+          {% snippet "snippets/language_selector.html" %}
+        {% endblock %}
           {% endblock %}
         </div>
         </div>
