--- a/ckanext/amplus/templates/page.html
+++ b/ckanext/amplus/templates/page.html
@@ -36,7 +36,7 @@
 {% block footer %}
 <footer class="site-footer">
   <div class="container-fluid">
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="col-lg-10 col-lg-offset-1">
         {{ super() }}
       </div>
