--- a/ckanext/amplus/templates/footer.html
+++ b/ckanext/amplus/templates/footer.html
@@ -3,8 +3,8 @@
 {% endblock %}
 
 {% block footer_content %}
-<div class="footer-container">
-    <div class="row">
+<div class="footer-container align-items-center">
+    <div class="row justify-content-center">
         <div class="col-md-12 col-lg-4 attribution">
           {% block footer_attribution %}
               {% block footer_links %}
@@ -42,6 +42,9 @@
               {% endif %}
             </div>
             {% endblock %}
+            {% block footer_lang %}
+            {% snippet "snippets/language_selector.html" %}
+          {% endblock %}
           {% endblock %}
         </div>
         </div>
