--- a/ckanext/amplus/templates/footer.html
+++ b/ckanext/amplus/templates/footer.html
@@ -3,12 +3,12 @@
 {% endblock %}
 
 {% block footer_content %}
-<div class="footer-container">
-    <div class="row">
+<div class="footer-container align-items-center">
+    <div class="row justify-content-center">
         <div class="col-md-12 col-lg-4 attribution">
           {% block footer_attribution %}
               {% block footer_links %}
-              <a class="logo" href="{{ h.url_for('home.index') }}"><img class="img-fluid" src="{{ h.url_for_static('/base/images/Amplus-OpenDataPortal-logo.png') }}" alt="{{ g.site_title }}" title="{{ g.site_title }}" /></a>
+              <a class="logo" href="{{ h.url_for('home.index') }}"><img class="img-responsive" src="{{ h.url_for_static('/base/images/Amplus-OpenDataPortal-logo.png') }}" alt="{{ g.site_title }}" title="{{ g.site_title }}" /></a>
                 {% if g.site_about %}
                   <p class="text-description py-20">{{ h.render_markdown(g.site_about) }}</p>
                 {% endif %}
@@ -42,6 +42,9 @@
               {% endif %}
             </div>
             {% endblock %}
+            {% block footer_lang %}
+            {% snippet "snippets/language_selector.html" %}
+          {% endblock %}
           {% endblock %}
         </div>
         </div>
