--- a/ckanext/amplus/templates/home/layout1.html
+++ b/ckanext/amplus/templates/home/layout1.html
@@ -67,7 +67,7 @@
             <p class="empty">{{ _('No datasets have been added yet') }}</p>
           {% endif %}
         </div>
-        <div class="data tab-pane fade in active" id="visualize">
+        <div class="data tab-pane active" id="visualize">
             {% set featured_charts = h.c3charts_featured_charts(4) %}
             {% if featured_charts %}
               {% for featured_chart in featured_charts %}
